--- a/templates/Proyecto_web_y_mobil.html
+++ b/templates/Proyecto_web_y_mobil.html
@@ -43,7 +43,7 @@
     <!-- HERO CON VIDEO -->
     <section class="hero">
         <video id="heroVideo" class="hero-video" autoplay muted loop playsinline>
-            <source src="{{ url_for('static', filename='video/fondo.mp4') }}" type="video/mp4">
+            <source src="{{ url_for('static', filename='Video/fondo.mp4') }}" type="video/mp4">
         </video>
 
         <div class="hero-banner">
