--- a/templates/productos.html
+++ b/templates/productos.html
@@ -14,7 +14,7 @@
 <nav class="navbar navbar-expand-lg bg-white shadow-sm fixed-top">
     <div class="container">
         <a class="navbar-brand d-flex align-items-center" href="/">
-            <img src="/static/solologo.jpg" alt="ORMAS G&V" height="40" class="me-2" />
+            <img src="{{ url_for('static', filename='solologo.JPG') }}" alt="ORMAS G&V S.A.S." height="40" class="me-2">
             <span class="fw-bold">ORMAS G&V S.A.S.</span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
