--- a/templates/Crear.html
+++ b/templates/Crear.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles2.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='Styles2.css') }}">
 
     <style>
         body {
